[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "4.2.1", features = ["derive"] }
common-types = { path = "../common-types" }
drivers = { path = "../drivers" }
futures = "0.3.26"
image = "0.24.6"
libc = "0.2.140"
openssl = { version = "0.10.45", features = ["vendored"] }
rgb565 = "0.1.3"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
volatile = { version = "0.4.6", features = ["unstable"] }
