[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-types = { path = "../common-types" }
itertools = "0.10.5"
libc = "0.2.140"
memmap2 = "0.5.10"
tokio = { version = "1.27.0", features = ["full"] }
voladdress = "1.3.0"
volatile = { version = "0.4.6", features = ["unstable"] }
