[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
axum = { version = "0.6.4", features = ["multipart", "ws"] }
common-types = { path = "../common-types" }
chrono = "0.4.23"
derivative = "2.2.0"
derive_more = "0.99.17"
firestore = "0.31.0"
futures = "0.3.26"
futures-util = "0.3.26"
google-cloud-default = { version = "0.1.0", features = ["storage"] }
google-cloud-storage = "0.10.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_bytes = "0.11.9"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
image = "0.24.5"
bincode = "1.3.3"
rgb565 = "0.1.3"
rayon = "1.7.0"

[dev-dependencies]
axum-test-helper = "0.2.0"
rand = "0.8.5"
